--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint-plugin-standard": "2.0.0",
     "eslint": "3.1.1",
     "eslint-plugin-promise": "2.0.0"
+  },
+  "greenkeeper": {
+    "emails": false
   }
 }
