--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "files": [
     "index.js"
   ],
+  "scripts": {
+    "test": "xo"
+  },
   "dependencies": {},
   "devDependencies": {
-    "eslint-config-standard": "6.0.1",
-    "eslint-plugin-standard": "2.0.0",
-    "eslint": "3.6.0",
-    "eslint-plugin-promise": "2.0.1"
+    "xo": "^0.17.0"
   },
   "greenkeeper": {
     "emails": false
+  },
+  "xo": {
+    "esnext": true,
+    "space": true,
+    "semicolon": false
   }
 }
