Add ava to test script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "xo"
+    "test": "xo && ava"
   },
   "dependencies": {},
   "devDependencies": {
