Add ava tests (#21)
* Comment should be capitalized (according to xo)

* Add ava to package.json

* Add single test

* Add ava to test script

* Add chars.js

* Add uid should contain only UIDCHARS

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "index.js"
   ],
   "scripts": {
-    "test": "xo"
+    "test": "xo && ava"
   },
   "dependencies": {},
   "devDependencies": {
+    "ava": "^0.19.1",
     "xo": "^0.17.0"
   },
   "greenkeeper": {
