--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: node_js
-sudo: false
-node_js: node
-git:
-  depth: 1
+{
+  "language": "node_js",
+  "node_js": [
+    "6",
+    "node"
+  ]
+}
