--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
   "scripts": {
     "test": "xo && ava"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "ava": "^0.19.1",
-    "xo": "^0.17.0"
-  },
-  "greenkeeper": {
-    "emails": false
-  },
   "xo": {
     "esnext": true,
     "space": true,
     "semicolon": false
+  },
+  "devDependencies": {
+    "ava": "0.19.1",
+    "xo": "0.17.0"
   }
 }
