--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "lib"
   ],
   "scripts": {
-    "test": "xo && ava"
+    "build": "tsc",
+    "test": "ava"
   },
   "repository": "zeit/uid-promise",
   "license": "MIT",
-  "xo": {
-    "esnext": true,
-    "space": true,
-    "semicolon": false
-  },
   "devDependencies": {
+    "@types/node": "11.9.5",
     "ava": "0.19.1",
-    "xo": "0.17.0"
+    "typescript": "3.3.3333"
   }
 }
