--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "generates a cryptographically strong random uid",
   "main": "lib/index.js",
+  "types": "lib/index.d.js",
   "files": [
     "lib"
   ],
