--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "tsc",
     "test": "tsc && ava"
   },
-  "repository": "zeit/uid-promise",
+  "repository": "vercel/uid-promise",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "11.9.5",
-    "ava": "0.19.1",
-    "typescript": "3.3.3333"
+    "@types/node": "16.6.1",
+    "ava": "3.15.0",
+    "typescript": "4.3.5"
   }
 }
