--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "uid-promise",
   "version": "1.1.0",
+  "license": "MIT",
   "description": "generates a cryptographically strong random uid",
+  "repository": "vercel/uid-promise",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -11,11 +13,16 @@
     "build": "tsc",
     "test": "tsc && ava"
   },
-  "repository": "vercel/uid-promise",
-  "license": "MIT",
   "devDependencies": {
     "@types/node": "16.6.1",
     "ava": "3.15.0",
+    "prettier": "2.3.2",
     "typescript": "4.3.5"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
