--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,20 @@
 {
-    "compilerOptions": {
-      "declaration": true,
-      "esModuleInterop": true,
-      "lib": ["esnext"],
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "noEmitOnError": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "outDir": "./lib",
-      "types": ["node"],
-      "strict": true,
-      "target": "esnext",
-      "typeRoots": [
-        "./types",
-        "./node_modules/@types"
-      ]
-    },
-    "include": ["./src", "./test"]
-  }
-  
+  "compilerOptions": {
+    "declaration": true,
+    "esModuleInterop": true,
+    "lib": ["esnext"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "./lib",
+    "types": ["node"],
+    "strict": true,
+    "target": "esnext",
+    "typeRoots": ["./types", "./node_modules/@types"]
+  },
+  "include": ["./src", "./test"]
+}
